<resources>
    <string name="app_name">DunlapChat</string>
    <string name="register_activity">Register Activity</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Create Account</string>
    <string name="auth_failed">\"Authorization failed.\"</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="your_email">Your Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="request_fragment">Welcome to Request Fragment</string>
    <string name="chat_fragment">Welcome to Chat Fragment</string>
    <string name="friends_fragment">Welcome to Friends Fragment</string>
</resources>
