<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guest.dunlapchat.RegisterActivity">

    <include
        android:id="@+id/reg_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_height="150dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/reg_display_name"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/display_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_display_name"
        android:id="@+id/reg_email"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_email"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/reg_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/register"
        app:layout_constraintRight_toRightOf="@+id/reg_password"
        app:layout_constraintTop_toBottomOf="@+id/reg_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Account"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@+id/reg_toolbar"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/reg_display_name" />
</android.support.constraint.ConstraintLayout>
